<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.orangecoastcollege.cs273.pdavis11.occars.LoanSummaryActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/content"
        app:srcCompat="@drawable/oc_cars_logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/loanSummaryTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/steel_blue"
        android:gravity="center"
        android:text="@string/loan_summary"
        android:textColor="@color/bone_white"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="165dp" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/go_data_entry" />

    <TextView
        android:id="@+id/loanReportTextView"
        android:layout_width="340dp"
        android:layout_height="125dp"
        android:layout_above="@+id/returnButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/MonthlyPaymentTextView"
        android:layout_width="340dp"
        android:layout_height="125dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />
</RelativeLayout>
